fix: change TargetFramework to use aspnetCoreVersion variable in modelsProject.csproj.mustache

--- a/src/main/resources/aspnetcore-di/modelsProject.csproj.mustache
+++ b/src/main/resources/aspnetcore-di/modelsProject.csproj.mustache
@@ -3,7 +3,7 @@
     <Description>{{packageDescription}}{{^packageDescription}}{{modelPackage}}{{/packageDescription}}</Description>
     <Copyright>{{packageCopyright}}</Copyright>
     <Authors>{{packageAuthors}}</Authors>
-    <TargetFramework>{{targetFramework}}</TargetFramework>
+    <TargetFramework>net{{aspnetCoreVersion}}</TargetFramework>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <PreserveCompilationContext>true</PreserveCompilationContext>
     <Version>{{packageVersion}}</Version>
