--- a/src/main/resources/aspnetcore-di/validateModel.mustache
+++ b/src/main/resources/aspnetcore-di/validateModel.mustache
@@ -5,12 +5,18 @@ using Microsoft.AspNetCore.Mvc;
 using Microsoft.AspNetCore.Mvc.Controllers;
 using Microsoft.AspNetCore.Mvc.Filters;
 using Microsoft.AspNetCore.Mvc.ModelBinding;
+{{#excludeFromCodeCoverage}}
+using System.Diagnostics.CodeAnalysis;
+{{/excludeFromCodeCoverage}}
 
 namespace {{packageName}}.Attributes
 {
     /// <summary>
     /// Model state validation attribute
     /// </summary>
+    {{#excludeFromCodeCoverage}}
+    [ExcludeFromCodeCoverage]
+    {{/excludeFromCodeCoverage}}
     public class ValidateModelStateAttribute : ActionFilterAttribute
     {
         /// <summary>
