--- a/src/main/resources/aspnetcore-di/apiAuthentication.mustache
+++ b/src/main/resources/aspnetcore-di/apiAuthentication.mustache
@@ -4,12 +4,18 @@ using System.Linq;
 using System.Threading.Tasks;
 using Microsoft.AspNetCore.Authorization;
 using Microsoft.AspNetCore.Mvc.Filters;
+{{#excludeFromCodeCoverage}}
+using System.Diagnostics.CodeAnalysis;
+{{/excludeFromCodeCoverage}}
 
 namespace {{packageName}}.Authentication
 {
     /// <summary>
     /// A requirement that an ApiKey must be present.
     /// </summary>
+    {{#excludeFromCodeCoverage}}
+    [ExcludeFromCodeCoverage]
+    {{/excludeFromCodeCoverage}}
     public class ApiKeyRequirement : IAuthorizationRequirement
     {
         /// <summary>
@@ -37,6 +43,9 @@ namespace {{packageName}}.Authentication
     /// <summary>
     /// Enforce that an api key is present.
     /// </summary>
+    {{#excludeFromCodeCoverage}}
+    [ExcludeFromCodeCoverage]
+    {{/excludeFromCodeCoverage}}
     public class ApiKeyRequirementHandler : AuthorizationHandler<ApiKeyRequirement>
     {
         /// <copydoc cref="AuthorizationHandler{T}.HandleRequirementAsync" />
