--- a/src/main/resources/aspnetcore-di/typeConverter.mustache
+++ b/src/main/resources/aspnetcore-di/typeConverter.mustache
@@ -3,12 +3,21 @@ using System;
 using System.ComponentModel;
 using System.Globalization;
 using System.Text.Json;
+{{#excludeFromCodeCoverage}}
+using System.Diagnostics.CodeAnalysis;
+{{/excludeFromCodeCoverage}}
 
+{{#excludeFromCodeCoverage}}
+[System.Diagnostics.CodeAnalysis.ExcludeFromCodeCoverage]
+{{/excludeFromCodeCoverage}}
 namespace {{packageName}}.Converters
 {
     /// <summary>
     /// Custom string to enum converter
     /// </summary>
+    {{#excludeFromCodeCoverage}}
+    [ExcludeFromCodeCoverage]
+    {{/excludeFromCodeCoverage}}
     public class CustomEnumConverter<T> : TypeConverter
     {
         /// <summary>
