--- a/src/main/resources/aspnetcore-di/model.mustache
+++ b/src/main/resources/aspnetcore-di/model.mustache
@@ -7,6 +7,7 @@ using System.ComponentModel;
 using System.ComponentModel.DataAnnotations;
 using System.Runtime.Serialization;
 using System.Text.Json;
+using System.Text.Json.Serialization;
 {{#models}}
 {{#model}}
 {{#discriminator}}
@@ -62,6 +63,7 @@ namespace {{modelPackage}}
         [MaxLength({{.}})]{{/maxLength}}{{/minLength}}{{#minimum}}{{#maximum}}
         [Range({{minimum}}, {{maximum}})]{{/maximum}}{{/minimum}}
         [DataMember(Name="{{baseName}}", EmitDefaultValue={{#isNullable}}true{{/isNullable}}{{^isNullable}}{{#vendorExtensions.x-is-value-type}}true{{/vendorExtensions.x-is-value-type}}{{^vendorExtensions.x-is-value-type}}false{{/vendorExtensions.x-is-value-type}}{{/isNullable}})]
+        [JsonPropertyName("{{baseName}}"){{^isNullable}}{{#nullableReferenceTypes}}, JsonIgnore(Condition = JsonIgnoreCondition.WhenWritingNull){{/nullableReferenceTypes}}{{^nullableReferenceTypes}}{{#vendorExtensions.x-is-reference-type}}, JsonIgnore(Condition = JsonIgnoreCondition.WhenWritingNull){{/vendorExtensions.x-is-reference-type}}{{/nullableReferenceTypes}}{{/isNullable}}]
         {{#isEnum}}
         public {{{datatypeWithEnum}}}{{#isNullable}}?{{/isNullable}} {{name}} { get; set; }{{#defaultValue}} = {{{.}}};{{/defaultValue}}
         {{/isEnum}}
