--- a/src/main/resources/aspnetcore-di/model.mustache
+++ b/src/main/resources/aspnetcore-di/model.mustache
@@ -63,8 +63,8 @@ namespace {{modelPackage}}
         [MinLength({{minLength}})]{{/maxLength}}{{/minLength}}{{^minLength}}{{#maxLength}}
         [MaxLength({{.}})]{{/maxLength}}{{/minLength}}{{#minimum}}{{#maximum}}
         [Range({{minimum}}, {{maximum}})]{{/maximum}}{{/minimum}}
-        [DataMember(Name="{{baseName}}", EmitDefaultValue={{#isNullable}}true{{/isNullable}}{{^isNullable}}{{#required}}false{{/required}}{{^required}}{{#vendorExtensions.x-is-value-type}}{{#defaultValue}}true{{/defaultValue}}{{^defaultValue}}false{{/defaultValue}}{{/vendorExtensions.x-is-value-type}}{{^vendorExtensions.x-is-value-type}}false{{/vendorExtensions.x-is-value-type}}{{/required}}{{/isNullable}})]
-        [JsonPropertyName("{{baseName}}"){{#nullableReferenceTypes}}{{^isContainer}}{{^required}}{{^isNullable}}, JsonIgnore(Condition = JsonIgnoreCondition.WhenWritingNull){{/isNullable}}{{/required}}{{/isContainer}}{{/nullableReferenceTypes}}{{^nullableReferenceTypes}}{{#vendorExtensions.x-is-reference-type}}{{^isNullable}}{{^required}}, JsonIgnore(Condition = JsonIgnoreCondition.WhenWritingNull){{/required}}{{/isNullable}}{{/vendorExtensions.x-is-reference-type}}{{#vendorExtensions.x-is-value-type}}{{^required}}, JsonIgnore(Condition = JsonIgnoreCondition.WhenWritingDefault){{/required}}{{/vendorExtensions.x-is-value-type}}{{/nullableReferenceTypes}}]
+        [DataMember(Name="{{baseName}}", EmitDefaultValue={{#vendorExtensions.x-serialize-default}}true{{/vendorExtensions.x-serialize-default}}{{^vendorExtensions.x-serialize-default}}{{#isNullable}}true{{/isNullable}}{{^isNullable}}false{{/isNullable}}{{/vendorExtensions.x-serialize-default}})]
+        [JsonPropertyName("{{baseName}}"){{^vendorExtensions.x-serialize-default}}{{^isNullable}}, JsonIgnore(Condition = JsonIgnoreCondition.WhenWritingDefault){{/isNullable}}{{/vendorExtensions.x-serialize-default}}]
         {{#isEnum}}
         public {{{datatypeWithEnum}}}{{#isNullable}}?{{/isNullable}} {{name}} { get; set; }{{#defaultValue}} = {{{.}}};{{/defaultValue}}
         {{/isEnum}}
